syntax= "proto3";

package pb;

option go_package = "./pkg/common/pb";

service Autharization {
    rpc UserSignup (SignupRequest) returns (SignupResponse){}
    rpc OtpValidation (OtpValidationRequest) returns (OtpValidationResponse){}
    rpc UserLogin (LoginRequest) returns (LoginResponse){}
    rpc validName (validNameRequest) returns (validNameResponse){}
  
}

// Signup

message SignupRequest {
    string email = 1;
    string password = 2;
    string phone_number = 3;
    string user_name = 4;

  }
  
  message SignupResponse {
    int64 status = 1;
    string error = 2;
    
  }

  // OtpValidation

  message OtpValidationRequest {
    string otp =1;
    string phonenumber = 2;
  }

  message OtpValidationResponse {
    int64 status = 1;
    string error = 2;
  }
  
// Login

message LoginRequest {
    string email = 1;
    string password = 2;
  }
  
  message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
  }

  // validNameRequest

  message validNameRequest {
    string username = 1;
  }

  message validNameResponse{
    int64 status = 1;
    string message = 2;
    string error = 3;
  }
  